FIX: fixes the z-index for the Chat widget

--- a/src/components/Band/Band.scss
+++ b/src/components/Band/Band.scss
@@ -22,7 +22,7 @@
     }
 
     .band-score {
-        background: rgba(0, 0, 0, .7);
+        background: rgba(0, 0, 0, .5);
         bottom: 7px;
         position: absolute;
         left: 50%;
