--- a/src/components/Game/Game.scss
+++ b/src/components/Game/Game.scss
@@ -153,6 +153,7 @@
         position: absolute;
         bottom: 2%;
         right: 12.5%;
+        z-index: 100;
 
         &.expanded {
             right: 1.5%;
